Made the friends page, and the friend request, accept, and delete functionality

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -542,6 +542,12 @@
     background-color: #00000085;
     border-radius: 10px;
 }
+.deleteGalleryBTN{
+    border: none;
+    background-color: transparent;
+    border-radius: 10px;
+}
+
 
 /* Friends Page */
 
