--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -414,6 +414,11 @@
     border: none;
 }
 
+.deleteEventButton{
+    border: none;
+    background-color: transparent;
+}
+
 /* Edit Event */
 
 .inputBG > input{
@@ -655,9 +660,13 @@
     border-radius: 10px;
 }
 .chatMessages{
-    height: calc(100% - 40px);
+    height: 640px;
     overflow-y: auto;
     box-sizing: border-box;
+    max-height: 100%;
+    padding: 10px;
+    scrollbar-width: auto;
+    scrollbar-color: auto;
 }
 
 .chatMessages::-webkit-scrollbar {
